--- a/index.html
+++ b/index.html
@@ -9,32 +9,33 @@ body{font-family:Arial;background:#f2f4f7;margin:20px}
 table{width:100%;border-collapse:collapse;background:#fff;margin-top:10px}
 th,td{border:1px solid #ccc;padding:5px;text-align:center}
 th{background:#eee}
-button{padding:6px 12px;margin:5px 0}
 input{width:100%;box-sizing:border-box}
-.karyawan{border:2px solid #999;padding:10px;margin-bottom:20px;background:#fafafa}
+button{padding:6px 12px;margin:5px 0;cursor:pointer}
+.karyawan{border:2px solid #999;padding:10px;margin-bottom:25px;background:#fafafa}
 .green{color:green}
+.red{color:red}
 </style>
 </head>
 
 <body>
 
-<h2>Payroll 2 Minggu (SAFE MODE)</h2>
+<h2>Payroll 2 Minggu</h2>
 
-<label>Tanggal Mulai:</label>
+Tanggal Mulai:
 <input type="date" id="tanggalMulai">
 
 <br><br>
 <button id="btnTambah">+ Tambah Karyawan</button>
 
 <h3>Total Jam: <span id="totJam">0</span></h3>
-<h3>Total Gaji: <span id="totGaji">Rp 0</span></h3>
+<h3>Total Gaji: <span class="green" id="totGaji">Rp 0</span></h3>
 
 <hr>
 
 <div id="list"></div>
 
 <script>
-document.addEventListener("DOMContentLoaded", function(){
+document.addEventListener("DOMContentLoaded",function(){
 
 const hari=["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
 const list=document.getElementById("list");
@@ -47,13 +48,18 @@ function ddmmyy(d){
 }
 
 function tabel(){
-  let t="<table><tr><th>Tgl</th><th>Hari</th><th>Masuk</th><th>Keluar</th><th>Jam</th></tr>";
+  let t=`<table>
+  <tr>
+    <th>Tgl</th><th>Hari</th><th>Masuk</th><th>Keluar</th><th>x2</th><th>Jam</th>
+  </tr>`;
   for(let i=0;i<14;i++){
-    t+=`<tr data-i="${i}">
+    t+=`
+    <tr data-i="${i}">
       <td class="tgl"></td>
       <td class="hari"></td>
       <td><input type="time"></td>
       <td><input type="time"></td>
+      <td><input type="checkbox"></td>
       <td class="jam">0</td>
     </tr>`;
   }
@@ -63,6 +69,7 @@ function tabel(){
 function refreshTanggal(){
   const start=document.getElementById("tanggalMulai").value;
   if(!start) return;
+
   document.querySelectorAll("[data-i]").forEach(r=>{
     const d=new Date(start);
     d.setDate(d.getDate()+Number(r.dataset.i));
@@ -74,14 +81,29 @@ function refreshTanggal(){
 function tambahKaryawan(nama){
   const div=document.createElement("div");
   div.className="karyawan";
+
   div.innerHTML=`
-    Nama: <input value="${nama}"><br>
-    Gaji/Jam: <input class="gaji" type="number" value="20000"><br>
-    Kasbon: <input class="kasbon" type="number" value="0"><br>
+    Nama:
+    <input value="${nama}">
+    <button class="hapus">Hapus</button><br><br>
+
+    Gaji/Jam:
+    <input type="number" class="gaji" value="20000">
+
+    Kasbon:
+    <input type="number" class="kasbon red" value="0">
+
     ${tabel()}
-    <b>Jam:</b> <span class="jTot">0</span><br>
-    <b>Gaji:</b> <span class="gTot green">Rp 0</span>
+
+    <b>Total Jam:</b> <span class="jTot">0</span><br>
+    <b>Gaji Bersih:</b> <span class="gTot green">Rp 0</span>
   `;
+
+  div.querySelector(".hapus").addEventListener("click",()=>{
+    div.remove();
+    hitung();
+  });
+
   list.appendChild(div);
   refreshTanggal();
   hitung();
@@ -91,44 +113,49 @@ function hitung(){
   let TJ=0, TG=0;
 
   document.querySelectorAll(".karyawan").forEach(k=>{
-    let jam=0;
-    const gj=+k.querySelector(".gaji").value||0;
-    const kb=+k.querySelector(".kasbon").value||0;
+    let jamTot=0;
+    const gaji=+k.querySelector(".gaji").value||0;
+    const kasbon=+k.querySelector(".kasbon").value||0;
 
     k.querySelectorAll("[data-i]").forEach(r=>{
-      let j=0;
-      const m=r.children[2].children[0].value;
-      const k2=r.children[3].children[0].value;
-      if(m && k2){
-        let a=new Date("1970-01-01T"+m);
-        let b=new Date("1970-01-01T"+k2);
-        j=(b-a)/36e5;
-        if(j<0) j+=24;
+      let jam=0;
+      const masuk=r.children[2].children[0].value;
+      const keluar=r.children[3].children[0].value;
+      const x2=r.children[4].children[0].checked;
+
+      if(masuk && keluar){
+        let a=new Date("1970-01-01T"+masuk);
+        let b=new Date("1970-01-01T"+keluar);
+        jam=(b-a)/36e5;
+        if(jam<0) jam+=24;     // shift malam
+        if(x2) jam*=2;        // fitur x2
       }
-      r.querySelector(".jam").innerText=j.toFixed(2);
-      jam+=j;
+
+      r.querySelector(".jam").innerText=jam.toFixed(2);
+      jamTot+=jam;
     });
 
-    const gaji=(jam*gj)-kb;
-    k.querySelector(".jTot").innerText=jam.toFixed(2);
-    k.querySelector(".gTot").innerText="Rp "+gaji.toLocaleString();
+    const gajiBersih=(jamTot*gaji)-kasbon;
 
-    TJ+=jam;
-    TG+=gaji;
+    k.querySelector(".jTot").innerText=jamTot.toFixed(2);
+    k.querySelector(".gTot").innerText="Rp "+gajiBersih.toLocaleString();
+
+    TJ+=jamTot;
+    TG+=gajiBersih;
   });
 
   document.getElementById("totJam").innerText=TJ.toFixed(2);
   document.getElementById("totGaji").innerText="Rp "+TG.toLocaleString();
 }
 
-btn.addEventListener("click",()=>tambahKaryawan("Karyawan"));
+btn.addEventListener("click",()=>tambahKaryawan("Karyawan Baru"));
 document.body.addEventListener("input",hitung);
 document.body.addEventListener("change",()=>{refreshTanggal();hitung();});
 
 document.getElementById("tanggalMulai").value=
   new Date().toISOString().split("T")[0];
 
-// default 3 dulu (biar ringan & pasti jalan)
+// default 3 karyawan (aman dulu)
 for(let i=1;i<=3;i++) tambahKaryawan("Karyawan "+i);
 
 });
